# Kits

./: README.md  README.ru.md  pyproject.toml  test_demo.py
kits/kit_chunker/: __init__.py  errors.py  pdf.py  splitters.py  tokenizers.py
kits/kit_common/: __init__.py  config.py  errors.py  logging.py  models.py  utils.py
kits/kit_llm/: __init__.py  chat.py  client.py  embed.py  errors.py
kits/kit_vector/: __init__.py  base.py  models.py  qdrant_backend.py
kits/kits.egg-info/: PKG-INFO  SOURCES.txt  requires.txt  top_level.txt
tests/: test_chunker_pdf.py  test_chunker_splitters.py  test_common_config.py  test_common_logging.py  test_common_models.py  test_common_utils.py  test_llm_embed_chat.py  test_vector_qdrant.py
